# iot_device

./: .gitignore  Dockerfile  Dockerfiletest  README.md  button.js  database.js  fp.js  gui.js  main.js  package.json  pubsub.js  qemu-arm  rfid.js  sms.js  sound.js  start.sh  start2.sh  util.js
database/: database.sql
dpreader/: ._main.cpp  ._reader.cpp  .gitignore  CMakeLists.txt  base64.cpp  base64.h  dpreader_1_100  dpreader_1_1000  dpreader_1_10000  enroll.cpp  enroll.h  identify.cpp  identify.h  main.cpp  main.h  reader.cpp  reader.h
resin-wifi-connect/src/: config.coffee
resin-wifi-connect/src/public/: index.html
resin-wifi-connect/src/public/css/: smartadmin-skins.min.css  style.css
resin-wifi-connect/src/public/js/: index.js
resin_image/: compileDTS.sh  elecfreaks_22_tft.dtb  enpuntoTFT.dts
screens/: index.html  principal.js  utils.js
screens/img/: actualizando.fb  enroll.xcf
